--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  background-color: #1e1e2e;
+  color: #d9e0ee;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
   text-align: center;
   padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-  border: 1px solid #ddd;
+  max-width: 800px;
+  margin: 20px auto;
+  background-color: #302d41;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
@@ -17,74 +22,73 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  background-color: #44475a;
+  padding: 10px 20px;
+  border-radius: 8px 8px 0 0;
 }
 
-.settings img, .edit img {
-  width: 16px;
-  margin: 0 20px;
+.settings img,
+.edit img {
+  width: 24px;
+  height: 24px;
   cursor: pointer;
 }
 
 .extension-name {
-  font-size: 16px;
-  color: #333;
-  margin: 0 10px;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #f5c2e7;
+  margin: 0 20px; /* Add margin to give some space */
 }
 
 .content {
   margin-top: 20px;
+  padding: 20px;
+  text-align: center;
 }
 
 button {
   display: block;
-  margin: 10px auto;
-  padding: 10px 20px;
-  font-size: 14px;
+  margin: 8px auto; /* Reduced margin */
+  padding: 8px 15px; /* Reduced padding */
+  font-size: 12px; /* Reduced font size */
   cursor: pointer;
   border-radius: 5px;
-  border: 1px solid #ddd;
-  background-color: #f8f8f8;
+  border: none;
+  background-color: #6272a4;
+  color: #d9e0ee;
   transition: background-color 0.3s, color 0.3s;
 }
 
 button:hover {
-  background-color: #e0e0e0;
+  background-color: #f28fad;
 }
 
 button:focus {
   outline: 2px solid #333;
 }
 
-.no-codes {
-  margin-top: 30px;
-}
-
 .no-codes-message {
-  font-size: 12px;
-  color: #bbb;
+  font-size: 1.2em;
+  color: #d9e0ee;
   margin-bottom: 10px;
 }
 
-.arrow {
-  font-size: 24px;
-  color: #888;
-}
-
 .sidebar {
-  position: absolute;
+  position: fixed; /* Use fixed position to slide over */
   top: 0;
   right: -300px;
   width: 250px;
   height: 100%;
-  background-color: #f8f8f8;
+  background-color: #44475a;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   transition: right 0.3s;
-  padding: 20px;
+  padding: 15px; /* Reduced padding */
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 0 0 8px 8px;
 }
 
 .sidebar.show {
@@ -93,6 +97,6 @@ button:focus {
 
 .version {
   margin-top: auto;
-  font-size: 12px;
-  color: #bbb;
+  font-size: 0.8em; /* Reduced font size */
+  color: #d9e0ee;
 }
